# ibm-storage-protect-python-sdk

./: README.md  citScanOutput.xml  pyproject.toml
.github/: CODEOWNERS
docs/contrib/: README.md  coding_standards.md  diagnostic_standards.md  testing_standards.md
docs/design/: hld.md  lld.md  mock_c_api.md
docs/guides/: 01_session_models.md  02_backup_models.md  03_query_models.md  04_restore_models.md  05_control_management.md  06_group_operations.md  07_logging_guide.md  README.md  api_summary.md
docs/requirements/: c_api_coverage.md  features.md
docs/test/: test-cases.md  test-scenarios.md
docs/traceability/: design-coverage.md  docstring_report.md  feature-coverage.md  feature-traceability.md  pylint_report.md  serviceability-coverage.md  test-coverage.md
examples/filesystem/: README.md
examples/filesystem/docs/: guide.md
examples/filesystem/tests/: conftest.py  test_filesystem_integration.py
examples/postgre/docs/: guide.md
src/ibm_storage_protect/: __init__.py  control.py  enums.py  query.py  session.py
src/ibm_storage_protect/base/: __init__.py  client.py
src/ibm_storage_protect/c_api_bridge/: __init__.py
src/ibm_storage_protect/data_client/: __init__.py  client.py
src/ibm_storage_protect/data_models/: __init__.py  backup.py  filespace.py  object.py  query.py  restore.py  session.py
src/ibm_storage_protect/errors/: __init__.py  error_codes.py  exceptions.py  mapper.py
tests/: conftest.py  test_backup.py  test_control.py  test_errors.py  test_logger.py  test_query.py  test_restore.py  test_session.py
(+84 files in other folders)
